[gd_scene load_steps=13 format=3 uid="uid://baacptxohbg64"]

[ext_resource type="Script" path="res://Scripts/player_force_movement.gd" id="1_0l4br"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hupx0"]
albedo_color = Color(0.592157, 0, 0.176471, 1)

[sub_resource type="BoxMesh" id="BoxMesh_auyif"]
material = SubResource("StandardMaterial3D_hupx0")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cxagd"]
albedo_color = Color(0.780392, 0.905882, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ox8bn"]
material = SubResource("StandardMaterial3D_cxagd")
radius = 0.1
height = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_ohjev"]

[sub_resource type="SphereMesh" id="SphereMesh_nkp0p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yjpw3"]

[sub_resource type="Animation" id="Animation_owpho"]
resource_name = "Out"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OutLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jll3k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TagLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OutLabel:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ogcfo"]
resource_name = "Tagged"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TagLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aa0cd"]
_data = {
"Out": SubResource("Animation_owpho"),
"RESET": SubResource("Animation_jll3k"),
"Tagged": SubResource("Animation_ogcfo")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_mask = 6
script = ExtResource("1_0l4br")
SPEED = 4.0
JUMP_FORCE = 8.0
GRAVITY = -15.0
WALL_FORCE = 30.0
DASH_FORCE = 60.0

[node name="Pivot" type="Node3D" parent="."]

[node name="Character" type="MeshInstance3D" parent="Pivot"]
mesh = SubResource("BoxMesh_auyif")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.642033)
mesh = SubResource("SphereMesh_ox8bn")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_ohjev")

[node name="camera_mount" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="camera_mount"]
transform = Transform3D(1, 0, 0, 0, 0.969783, 0.24397, 0, -0.24397, 0.969783, 0, 2.79847, 5.46481)
current = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="TagLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -75.5
offset_right = 156.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.99998, 0.324129, 0.258971, 1)
theme_override_font_sizes/font_size = 64
text = "You're It!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -75.5
offset_right = 156.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.99998, 0.324129, 0.258971, 1)
theme_override_font_sizes/font_size = 64
text = "You're Out!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -75.5
offset_right = 156.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.99998, 0.324129, 0.258971, 1)
theme_override_font_sizes/font_size = 64
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalWinLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -75.5
offset_right = 156.0
offset_bottom = 75.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.99998, 0.324129, 0.258971, 1)
theme_override_font_sizes/font_size = 64
text = "You Win!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
emitting = false
one_shot = true
explosiveness = 1.0
mesh = SubResource("SphereMesh_nkp0p")
spread = 122.5
initial_velocity_min = 27.78
initial_velocity_max = 208.33

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_yjpw3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aa0cd")
}

[node name="GraceTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -26.667

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="GraceTimer" to="." method="_on_grace_timer_timeout"]
